# BattleShip

./: .gitignore  BattleShip.pro  CMakeCache.txt  CMakeLists.txt  README.md  cell.cpp  cell.h  colors.h  connector.cpp  connector.h  field.cpp  field.h  fonts.qrc  game.cpp  game.h  images.qrc  main.cpp  main.qml  player.h  qml.qrc
Android/: AndroidManifest.xml
Android/res/drawable/: splash_screen.xml
Android/res/values/: apptheme.xml
QML/: AnimatedArrow.qml  Cell.qml  FadeBehavior.qml  Field.qml  FieldInitializer.qml  Game.qml  HomePage.qml  NamesInput.qml  OpponentSelectPage.qml  PlayerView.qml  Restart.qml  ShipCounter.qml  ShipCounterRow.qml  WaitingPage.qml
res/: .demo_name.png-autosave.kra  .demo_online.png-autosave.kra
src/: cell.cpp  connector.cpp  connector.h  field.cpp  field.h  game.cpp  game.h  main.cpp
